--- a/ProjetoApollo/Biblioteca/Biblioteca.csproj
+++ b/ProjetoApollo/Biblioteca/Biblioteca.csproj
@@ -48,6 +48,8 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="pacoteArtista\Artista.cs" />
+    <Compile Include="pacoteArtista\ArtistaDados.cs" />
+    <Compile Include="pacoteArtista\ArtistaNegocio.cs" />
     <Compile Include="pacoteArtista\InterfaceArtista.cs" />
     <Compile Include="pacoteCliente\Cliente.cs" />
     <Compile Include="pacoteCliente\ClienteDados.cs" />
