Corrigido bugs no objeto Horario e Finalizado o objeto Tipo

--- a/ProjetoApollo/Biblioteca/Biblioteca.csproj
+++ b/ProjetoApollo/Biblioteca/Biblioteca.csproj
@@ -72,6 +72,8 @@
     <Compile Include="pacoteSala\SalaNegocio.cs" />
     <Compile Include="pacoteTipo\InterfaceTipo.cs" />
     <Compile Include="pacoteTipo\Tipo.cs" />
+    <Compile Include="pacoteTipo\TipoDados.cs" />
+    <Compile Include="pacoteTipo\TipoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
