--- a/ProjetoApollo/ClienteForms/App.config
+++ b/ProjetoApollo/ClienteForms/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ClienteForms.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <applicationSettings>
+        <ClienteForms.Properties.Settings>
+            <setting name="ClienteForms_localhost_Service1" serializeAs="String">
+                <value>http://localhost:54570/Service1.svc</value>
+            </setting>
+        </ClienteForms.Properties.Settings>
+    </applicationSettings>
 </configuration>
