--- a/ProjetoApollo/ClienteForms/ClienteForms.csproj
+++ b/ProjetoApollo/ClienteForms/ClienteForms.csproj
@@ -59,6 +59,12 @@
     <Compile Include="FormAlterarCliente.Designer.cs">
       <DependentUpon>FormAlterarCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAlterarInstrumento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAlterarInstrumento.Designer.cs">
+      <DependentUpon>FormAlterarInstrumento.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormArtista.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,11 +83,11 @@
     <Compile Include="FormInicial.Designer.cs">
       <DependentUpon>FormInicial.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormInstrumento.cs">
+    <Compile Include="FormCadastrarInstrumento.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormInstrumento.Designer.cs">
-      <DependentUpon>FormInstrumento.cs</DependentUpon>
+    <Compile Include="FormCadastrarInstrumento.Designer.cs">
+      <DependentUpon>FormCadastrarInstrumento.cs</DependentUpon>
     </Compile>
     <Compile Include="FormSala.cs">
       <SubType>Form</SubType>
@@ -108,6 +114,9 @@
     <EmbeddedResource Include="FormAlterarCliente.resx">
       <DependentUpon>FormAlterarCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormAlterarInstrumento.resx">
+      <DependentUpon>FormAlterarInstrumento.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormArtista.resx">
       <DependentUpon>FormArtista.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,8 +126,8 @@
     <EmbeddedResource Include="FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormInstrumento.resx">
-      <DependentUpon>FormInstrumento.cs</DependentUpon>
+    <EmbeddedResource Include="FormCadastrarInstrumento.resx">
+      <DependentUpon>FormCadastrarInstrumento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSala.resx">
       <DependentUpon>FormSala.cs</DependentUpon>
