--- a/ProjetoApollo/ClienteForms/ClienteForms.csproj
+++ b/ProjetoApollo/ClienteForms/ClienteForms.csproj
@@ -59,6 +59,12 @@
     <Compile Include="FormAlterarCliente.Designer.cs">
       <DependentUpon>FormAlterarCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAlterarTipo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAlterarTipo.Designer.cs">
+      <DependentUpon>FormAlterarTipo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormArtista.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,18 @@
     </Compile>
     <Compile Include="FormCadastrarCliente.Designer.cs">
       <DependentUpon>FormCadastrarCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormCadastrarSala.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCadastrarSala.Designer.cs">
+      <DependentUpon>FormCadastrarSala.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormCadastrarTipo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCadastrarTipo.Designer.cs">
+      <DependentUpon>FormCadastrarTipo.cs</DependentUpon>
     </Compile>
     <Compile Include="FormInicial.cs">
       <SubType>Form</SubType>
@@ -89,12 +107,9 @@
     <Compile Include="FormSala.Designer.cs">
       <DependentUpon>FormSala.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormTipo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormTipo.Designer.cs">
-      <DependentUpon>FormTipo.cs</DependentUpon>
-    </Compile>
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web References\localhost\Reference.cs">
@@ -108,11 +123,20 @@
     <EmbeddedResource Include="FormAlterarCliente.resx">
       <DependentUpon>FormAlterarCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormAlterarTipo.resx">
+      <DependentUpon>FormAlterarTipo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormArtista.resx">
       <DependentUpon>FormArtista.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCadastrarCliente.resx">
       <DependentUpon>FormCadastrarCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCadastrarSala.resx">
+      <DependentUpon>FormCadastrarSala.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCadastrarTipo.resx">
+      <DependentUpon>FormCadastrarTipo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
@@ -123,9 +147,15 @@
     <EmbeddedResource Include="FormSala.resx">
       <DependentUpon>FormSala.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormTipo.resx">
-      <DependentUpon>FormTipo.cs</DependentUpon>
-    </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormAgendamento.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormAlterarCliente.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormArtista.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormCadastrarCliente.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormCadastrarSala.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormInicial.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormInstrumento.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.FormSala.resources" />
+    <EmbeddedResource Include="obj\Debug\ClienteForms.Properties.Resources.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -135,6 +165,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="bin\Debug\ClienteForms.exe.config" />
+    <None Include="obj\Debug\ClienteForms.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\ClienteForms.csproj.GenerateResource.Cache" />
+    <None Include="obj\Debug\ClienteForms.csprojResolveAssemblyReference.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -222,6 +258,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Web References\localhost\Service1.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\ClienteForms.exe" />
+    <Content Include="bin\Debug\ClienteForms.pdb" />
+    <Content Include="obj\Debug\ClienteForms.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\ClienteForms.exe" />
+    <Content Include="obj\Debug\ClienteForms.pdb" />
+    <Content Include="obj\Debug\TempPE\Web References.localhost.Reference.cs.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
