--- a/ProjetoApollo/ClienteForms/ClienteForms.csproj
+++ b/ProjetoApollo/ClienteForms/ClienteForms.csproj
@@ -71,6 +71,12 @@
     <Compile Include="FormAlterarSala.Designer.cs">
       <DependentUpon>FormAlterarSala.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAlterarTipo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAlterarTipo.Designer.cs">
+      <DependentUpon>FormAlterarTipo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormArtista.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,21 @@
     <Compile Include="FormCadastrarCliente.Designer.cs">
       <DependentUpon>FormCadastrarCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCadastrarInstrumento.Designer.cs">
+      <DependentUpon>FormCadastrarInstrumento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormCadastrarSala.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCadastrarSala.Designer.cs">
+      <DependentUpon>FormCadastrarSala.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormCadastrarTipo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCadastrarTipo.Designer.cs">
+      <DependentUpon>FormCadastrarTipo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormInicial.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,21 +112,6 @@
     </Compile>
     <Compile Include="FormCadastrarInstrumento.cs">
       <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormInstrumento.Designer.cs">
-      <DependentUpon>FormInstrumento.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormSala.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormSala.Designer.cs">
-      <DependentUpon>FormSala.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormTipo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormTipo.Designer.cs">
-      <DependentUpon>FormTipo.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -126,20 +132,26 @@
     <EmbeddedResource Include="FormAlterarSala.resx">
       <DependentUpon>FormAlterarSala.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormAlterarTipo.resx">
+      <DependentUpon>FormAlterarTipo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormArtista.resx">
       <DependentUpon>FormArtista.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCadastrarCliente.resx">
       <DependentUpon>FormCadastrarCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormCadastrarInstrumento.resx">
+      <DependentUpon>FormCadastrarInstrumento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCadastrarSala.resx">
+      <DependentUpon>FormCadastrarSala.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCadastrarTipo.resx">
+      <DependentUpon>FormCadastrarTipo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormInstrumento.resx">
-      <DependentUpon>FormInstrumento.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormSala.resx">
-      <DependentUpon>FormSala.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\ClienteForms.FormAgendamento.resources" />
     <EmbeddedResource Include="obj\Debug\ClienteForms.FormAlterarCliente.resources" />
